# MURFAI_10days

./: .replit  app.py  pyproject.toml  replit.md
DAY 4/: package.json
DAY 4/app/: layout.tsx  page.tsx
DAY 4/lib/: tutor-content.ts
DAY 4/shared-data/: day4_tutor_content.json
DAY 4/types/: speech-recognition.d.ts
DAY 5/src/: agent.py
DAY 6/: package-lock.json  package.json
DAY 6/attached_assets/: Pasted-Day-6-Fraud-Alert-Voice-Agent-Overview-Build-a-fraud-alert-voice-agent-for-your-favorite-bank--1764251216347_1764251216347.txt
DAY 6/client/: index.html
DAY 6/server/: routes.ts  seed.ts  storage.ts
DAY 6/shared/: schema.ts
DAY 8/attached_assets/: Pasted-Day-8-Voice-Game-Master-D-D-Style-Adventure-Welcome-to-Day-8-Today-you-ll-turn-your-voice-age-1764407758940_1764407758941.txt
DAY 8/client/: index.html
DAY 8/server/: gemini.ts  murf.ts  routes.ts
DAY 9/: design_guidelines.md  orders.json
DAY 9/attached_assets/: Pasted-Today-you-will-build-a-voice-driven-shopping-assistant-that-follows-a-very-lite-version-of-the-Agent-1764510980919_1764510980921.txt
DAY 9/client/: index.html
DAY 9/server/: gemini.ts  murf.ts  routes.ts  storage.ts
DAY 9/shared/: schema.ts
DAY2/: package.json
DAY2/app/: layout.tsx  page.tsx
DAY2/components/: barista-agent.tsx
DAY3/: DEMO_CONVERSATION.txt  SETUP_GUIDE.md  package.json
DAY3/app/: globals.css  page.tsx
DAY3/components/: voice-agent-chat.tsx  voice-input.tsx  voice-message.tsx  wellness-header.tsx
DAY3/lib/: wellness-storage.ts
Day 7/client/: index.html
Day 7/server/: routes.ts  storage.ts
(+46 files in other folders)
