[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "streamlit-audiorecorder>=0.0.6",
]
